app/assets/stylesheets/components/_paneling.css.sass
.panel
  position: relative
  .panel-meta
    font-size: 1rem
    color: #aaa

  .panel-expand
    position: absolute
    bottom: 0
    width: 100%
    height: 50px
    +linear-gradient(rgba(#fff, 0), rgba(#fff, 1))
    text-align: center
    padding-top: 30px

  &.panel-expanded
    max-height: none

.padding
  padding: $y-padding $padding

